packages/ca-scaffold-py/ca_scaffold_py-2.0.0.tar.gz/ca_scaffold_py-2.0.0/scaffold/{{cookiecutter.project_slug}}/templates/mcp_server/deployment/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: #{app-gateway}#-internal
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/responsible: #{responsible}#
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: #{gateway-port}#
      name: http
      protocol: HTTP
    hosts:
    - "#{gateway-host-internal}#"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: #{app-gateway}#-external
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/responsible: #{responsible}#
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: #{gateway-port}#
      name: http
      protocol: HTTP
    hosts:
    - "#{gateway-host-external}#"
