packages/ca-scaffold-py/ca_scaffold_py-2.0.0.tar.gz/ca_scaffold_py-2.0.0/scaffold/{{cookiecutter.project_slug}}/templates/mcp_server/deployment/k8s/virtualservice-internal.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: #{component}#-#{version}#-service-internal-vs
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/responsible: #{responsible}#
spec:
  hosts:
  - "#{gateway-host-internal}#"
  gateways:
  - #{app-gateway}#-internal
  http:
  - match:
    - uri:
        prefix: #{vs-internal-match}#
    rewrite:
      uri: "#{vs-internal-rewrite}#"
    route:
    - destination:
        host: #{component}#-#{version}#-service
        port:
          number: #{service-port}#
